edited text parts to make the notebook more beginner friendly

--- a/churn_classification_with_friends.ipynb
+++ b/churn_classification_with_friends.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Beispiel eines Neuronalen Netzes zur Vorhersage von Kundenabwanderung\n",
+    "## Beispiel eines Neuronalen Netzes zur Vorhersage von Kundenabwanderung\n",
     "Genutzt wird in diesem Fall ein **LSTM**-Netz (Long-Short-Term-Memory)\n",
     ", welches besonders gut für die Analyse von längeren Sequenzen (Texte, Kursverläufe etc.) geeignet ist.\n",
     "In unserem Fall sind dies Bestellverläufe verschiedener Kunden. Ziel ist es, das Netz auf einen Teil der Kundenbestellungen zu trainieren, und mit dem Rest zu testen ob das System diese richtig als abgesprungen oder nicht abgesprungen klassifiziert."
@@ -18,39 +18,43 @@
     }
    },
    "source": [
-    "Im folgenden finden Sie die Codefragmente mit den zugehörigen Beschreibungen. Diese müssen nacheinander von Ihnen ausgeführt werden."
+    "#### Wie führt man den Code aus?\n",
+    "Im folgenden Dokument finden Sie Codefragmente (Zellen) und Text, der beschreibt, was der Code macht. \n",
+    "Die Code-Zellen müssen nacheinander von Ihnen ausgeführt werden.\n",
+    "* Klicken Sie in die Zelle, um diese auszuwählen und dann Shift + Enter\n",
+    "* Drücken Sie *Shift+Enter* um den gesamten Code einer Zelle auszuführen. Dabei springt die Auswahl auf die nächste Zelle.\n",
+    "* Um zwischen den Zellen zu springen drücken Sie *Strg+Hoch/Runter*. \n",
+    "Weiter Shortcuts unter Help.\n",
+    "\n",
+    "Wenn Sie wenig Erfahrung mit Programmierung und Machine Learning haben wird der Code sicher schwer zu verstehen sein. Achten Sie auf die Beschreibungen und lassen Sie sich nicht Einschüchtern!\n",
+    "Sie werden ein paar Einladungen zur Interaktion mit dem Code finden!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Import der notwendigen Bibliotheken:\n",
-    "* **Keras** - Hauptframework für Machine Learning. (Basiert auf Google's Tensorflow)\n",
-    "* **Numpy** - Unter anderem zur Durchführung von Vektorberechnungen.\n",
-    "* **Pandas** - Regelt den Import und die Formatierung von Daten. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Imports und Funktionen"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Die wichtigsten Bibliotheken:\n",
+    "* **Keras** - Hauptframework für Machine Learning. (Basiert auf Google's Tensorflow)\n",
+    "* **Numpy** - Unter anderem zur Durchführung von Vektorberechnungen.\n",
+    "* **Pandas** - Regelt den Import und die Formatierung von Daten.\n",
+    "* **Matplotlib** - Zur Erstellung von Diagrammen"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import random as rn\n",
@@ -69,7 +73,13 @@
     "from tensorflow.keras.layers import Masking, LSTM, Dense, Dropout, concatenate\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -451,7 +461,7 @@
    "source": [
     "**Hier sind Sie gefragt!**\n",
     "\n",
-    "Wofür stehen wohl die Gruppen A und B? Ersetzen Sie die Strings im Code Block und führen Sie die Zelle erneut aus."
+    "Wofür stehen wohl die Gruppen A und B? Ersetzen Sie die den Text Labels und führen Sie die Zelle erneut aus."
    ],
    "metadata": {
     "collapsed": false,
@@ -497,19 +507,31 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "is_executing": false,
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
+   "source": [
+    "Hier teilen wir die Tabelle auf, weil wir als y-Daten eigentlich nur die Kundennummer und den Abwanderungstatus wollen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "friends = y_data.iloc[:,[0,2]]\n",
-    "y_data_red = y_data.iloc[:,[0,1]] # für das Neuronale Netz wollen wir nur die ersten beiden Spalten behalten"
-   ]
+    "y_data_red = y_data.iloc[:,[0,1]]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
