deleted empty lines

--- a/churn_classification_with_friends.ipynb
+++ b/churn_classification_with_friends.ipynb
@@ -1058,7 +1058,8 @@
    "execution_count": 57,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1168,17 +1169,6 @@
     "print(\"Genauigkeit: %.2f%%\" % (scores[1]*100))\n",
     "print(str(round(X_time_test.shape[0] * scores[1])) + \" von \" + str(X_time_test.shape[0]) + \" Beispielen richtig klassifiziert!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
