--- a/churn_classification_with_friends.ipynb
+++ b/churn_classification_with_friends.ipynb
@@ -19,7 +19,7 @@
    },
    "source": [
     "#### Wie führt man den Code aus?\n",
-    "Im folgenden Dokument finden Sie Codefragmente (Zellen) und Text, der beschreibt, was der Code macht. \n",
+    "Im folgenden Dokument finden Sie Codefragmente (Zellen) und Text, der beschreibt was der Code macht. \n",
     "Die Code-Zellen müssen nacheinander von Ihnen ausgeführt werden.\n",
     "* Klicken Sie in die Zelle, um diese auszuwählen und dann Shift + Enter\n",
     "* Drücken Sie *Shift+Enter* um den gesamten Code einer Zelle auszuführen. Dabei springt die Auswahl auf die nächste Zelle.\n",
